--- a/templates/Users/home.html
+++ b/templates/Users/home.html
@@ -156,7 +156,7 @@
       <div class="about-right d-flex flex-column align-items-center gap-3">
         <div class="logos-inline d-flex align-items-center gap-3 p-2">
           <img src="{%static '/IMAGES/Gabo.webp'%}" alt="Logo I.E Gabo" class="logos__image">
-          <img src="{%static '/IMAGES/SENA.webp'%}" alt="Logo SENA" class="logos__image">
+          <img src="{%static '/IMAGES/sena.webp'%}" alt="Logo SENA" class="logos__image">
         </div>
         <!-- espacio para otro contenido o notas si hace falta -->
       </div>
