--- a/templates/Users/home.html
+++ b/templates/Users/home.html
@@ -167,7 +167,7 @@
     </main>
     <footer class="text-center text-lg-start">
         <div class="container d-flex justify-content-center py-5">
-            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+            <button onclick="window.open('https://wa.me/573128107264', '_blank')" type="button" class="btn btn-primary btn-lg btn-floating mx-2">
                 <i class="bi bi-whatsapp"></i>
             </button>
             <button onclick="window.open('https://www.instagram.com/loginventoryoficial/', '_blank')" type="button" class="btn btn-primary btn-lg btn-floating mx-2">
