connect restricted js to profile

--- a/templates/Users/profile.html
+++ b/templates/Users/profile.html
@@ -102,5 +102,6 @@
     {% endif %}
     <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
     <script src="{%static '/SCRIPTS/profileScript.js'%}"></script>
+    <script src="{%static '/SCRIPTS/restrictedCaractersScript.js'%}"></script>
 </body>
 </html>
