Update contact email address in home page

--- a/templates/Users/home.html
+++ b/templates/Users/home.html
@@ -147,7 +147,7 @@
 
         <h2 class="contact__title">Contactanos</h2>
         <div class="contact__info small">
-          <p>Correo Electrónico: <a href="mailto:log.inventory2406@gmail.com">log.inventory2406@gmail.com</a></p>
+          <p>Correo Electrónico: <a href="mailto:soporte@log-inventory.com">soporte@log-inventory.com</a></p>
           <p>Teléfono: +57 312 8107264</p>
         </div>
       </div>
